# breeze-plymouth

./: .arclint  .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  README  breeze.plymouth  breeze.script
breeze/: CMakeLists.txt  README  breeze.grub  breeze.plymouth.cmake  breeze.script  breeze.script.cmake
breeze-text/: CMakeLists.txt  breeze-text.plymouth.cmake  plugin.c  ply-text-progress-bar.c  ply-text-progress-bar.h
breeze/images/16bit/: .directory
breeze/images/spinner/: generate.rb
cmake/: FindPlymouth.cmake
images/: .directory
sources/: busywidget.svgz  neon.logo.svgz  os.logo.svgz  plasma.logo.svgz  text-input.svgz
test/: plyrun.sh  plytest.sh
utils/: generate_spinner.rb  plymouth-rgb-normalizer
